# labDIP

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  imageutils.cpp  imageutils.h
